--- a/effects.html
+++ b/effects.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title>NAME</title>
+        <title>Fire Ecology | Home</title>
 
 
         <!-- Bootstrap  -->
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <!-- stylesheet  -->
         <link rel="stylesheet" href="styleAs.css">
+        <link rel="stylesheet" href="styleAd.css">
         <!-- Animate on Scroll -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -48,13 +49,13 @@
                 <ul class="navbar-nav ms-auto">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange">Home</a></b>
+                                class="nav-link hover-orange active">Home</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
                                 class="nav-link  hover-orange">About</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="AdvantageDisadvantage.html"
-                                class="nav-link  hover-orange active">Effects</a></b>
+                                class="nav-link  hover-orange">Effects</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#"
                                 class="nav-link hover-orange">Videos</a></b>
@@ -75,9 +76,7 @@
                 <div class="row ">
                     <!-- left side text -->
                     <div class="col-6 d-flex justify-content-center">
-                        <p class=" orangeCol text-center font-preahvihear landingHead">Fire
-                        </p>
-
+                        <p class="text-center landingHead">Fire Ecology</p>
                     </div>
 
 
