--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title>NAME</title>
+        <title>Fire Ecology | Home</title>
 
 
         <!-- Bootstrap  -->
@@ -11,7 +11,7 @@
         <!-- Bootstrap Icons -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <!-- stylesheet  -->
-        <link rel="stylesheet" href="styleAs.css">
+        <link rel="stylesheet" href="styleAd.css">
         <!-- Animate on Scroll -->
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -48,13 +48,13 @@
                 <ul class="navbar-nav ms-auto">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange">Home</a></b>
+                                class="nav-link hover-orange active">Home</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
                                 class="nav-link  hover-orange">About</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="AdvantageDisadvantage.html"
-                                class="nav-link  hover-orange active">Effects</a></b>
+                                class="nav-link  hover-orange">Effects</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#"
                                 class="nav-link hover-orange">Videos</a></b>
@@ -64,10 +64,8 @@
                 </ul>
             </div>
 
-            </div>
+        </div>
         </nav>
-
-
 
         <section class="mt-5">
 
@@ -75,9 +73,7 @@
                 <div class="row ">
                     <!-- left side text -->
                     <div class="col-6 d-flex justify-content-center">
-                        <p class=" orangeCol text-center font-preahvihear landingHead">Fire
-                        </p>
-
+                        <p class="landingHead">Fire Ecology</p>
                     </div>
 
 
@@ -87,7 +83,27 @@
                 </div>
             </div>
 
+        </section>
 
+        <hr>
+
+        <section class="mt-5">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="d-flex justify-content-center">
+                        <div class="">
+                            <h2 class="color-red">
+                            What is Fire Ecology
+                            </h2>
+                        </div>
+                        <div class="">
+                            <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Bootstrap Javascript  -->
