--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
         <!-- stylesheet  -->
         <link rel="stylesheet" href="styleAs.css">
 
+        
+
 
     </head>
 
@@ -85,6 +87,9 @@
                     class="shape-fill" fill="black" fill-opacity="1"></path>
             </svg>
 
+            <div style="height: 20px;"></div>
+
+
 
             <!-- heading -->
             <div class="fs-2 text-center my-4">What is Fire Ecology?</div>
@@ -102,13 +107,24 @@
 
             </div>
 
-            
+            <div style="height: 20px;"></div>
 
         </section>
 
 
 
 
+        <!-- effect on environment  -->
+        <section class="bgenvironmenteffect">
+
+            <div style="height: 70px;"></div>
+
+            <!-- heading -->
+            <div class="fs-2 text-center py-4">What is Fire Ecology?</div>
+
+
+
+        </section>
 
 
 
@@ -125,6 +141,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
             integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
             crossorigin="anonymous"></script>
+
+
 
 
     </body>
