--- a/index.html
+++ b/index.html
@@ -87,19 +87,118 @@
 
         <hr>
 
-        <section class="mt-5">
+        <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="d-flex justify-content-center">
-                        <div class="">
+                <div class="row col-6">
+                    <div class="d-flex flex-column">
+                        <div class="text-center">
                             <h2 class="color-red">
                             What is Fire Ecology
                             </h2>
                         </div>
-                        <div class="">
+                        <div class="p-3 container">
                             <p>
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
                             </p>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn button">
+                                Know More!
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="mt-5 justify-content-evenly">
+            <div class="container-fluid">
+                <div class="container row">
+                    <div class="col-6">
+                        <img src="https://via.placeholder.com/500x200" alt="placeholder">
+                    </div>
+
+                    <div class="row col-6">
+                        <div class="d-flex flex-column">
+                            <div class="text-center">
+                                <h2 class="color-red">
+                                What is Fire Ecology
+                                </h2>
+                            </div>
+                            <div class="p-3 container">
+                                <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <button type="button" class="btn button">
+                                    Know More!
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="mt-5 justify-content-evenly">
+            <div class="container-fluid">
+                <div class="row col-6">
+                    <div class="d-flex flex-column">
+                        <div class="text-center">
+                            <h2 class="color-red">
+                            What is Fire Ecology
+                            </h2>
+                        </div>
+                        <div class="p-3 container">
+                            <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
+                            </p>
+                        </div>
+                        <div class="text-center">
+                            <button type="button" class="btn button">
+                                Know More!
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6">
+
+                </div>
+            </div>
+        </section>
+
+        <hr>
+
+        <section class="mt-5 justify-content-evenly">
+            <div class="container-fluid">
+                <div class="container row">
+                    <div class="col-6">
+                        <img src="https://via.placeholder.com/500x200" alt="placeholder">
+                    </div>
+
+                    <div class="row col-6">
+                        <div class="d-flex flex-column">
+                            <div class="text-center">
+                                <h2 class="color-red">
+                                What is Fire Ecology
+                                </h2>
+                            </div>
+                            <div class="p-3 container">
+                                <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <button type="button" class="btn button">
+                                    Know More!
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
