--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
                         <p class="landingHead">Fire Ecology</p>
                     </div>
 
-
                     <!-- right side img -->
                     <div class="col-6">
                     </div>
@@ -89,23 +88,30 @@
 
         <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
-                <div class="row col-6">
-                    <div class="d-flex flex-column">
-                        <div class="text-center">
-                            <h2 class="color-red">
-                            What is Fire Ecology
-                            </h2>
+                <div class="container row">
+                    
+
+                    <div class="row col-6">
+                        <div class="d-flex flex-column">
+                            <div class="text-center">
+                                <h2 class="color-red">
+                                What is Fire Ecology
+                                </h2>
+                            </div>
+                            <div class="p-3 container">
+                                <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <button type="button" class="btn button">
+                                    Know More!
+                                </button>
+                            </div>
                         </div>
-                        <div class="p-3 container">
-                            <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
-                            </p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn button">
-                                Know More!
-                            </button>
-                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="https://via.placeholder.com/500x200" alt="placeholder">
                     </div>
                 </div>
             </div>
@@ -147,28 +153,31 @@
 
         <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
-                <div class="row col-6">
-                    <div class="d-flex flex-column">
-                        <div class="text-center">
-                            <h2 class="color-red">
-                            What is Fire Ecology
-                            </h2>
-                        </div>
-                        <div class="p-3 container">
-                            <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
-                            </p>
-                        </div>
-                        <div class="text-center">
-                            <button type="button" class="btn button">
-                                Know More!
-                            </button>
+                <div class="container row">
+                    
+
+                    <div class="row col-6">
+                        <div class="d-flex flex-column">
+                            <div class="text-center">
+                                <h2 class="color-red">
+                                What is Fire Ecology
+                                </h2>
+                            </div>
+                            <div class="p-3 container">
+                                <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, aperiam neque. Perferendis ad explicabo voluptates laudantium nisi ex fugiat temporibus facilis totam sapiente, culpa, itaque, quisquam porro incidunt molestiae et!
+                                </p>
+                            </div>
+                            <div class="text-center">
+                                <button type="button" class="btn button">
+                                    Know More!
+                                </button>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-6">
-
+                    <div class="col-6">
+                        <img src="https://via.placeholder.com/500x200" alt="placeholder">
+                    </div>
                 </div>
             </div>
         </section>
