--- a/about.html
+++ b/about.html
@@ -97,18 +97,21 @@
 
             <!-- content -->
 
-            <div class="fs-6 text-center mt-5 pb-5 mx-5">
-                <p>Fire ecology is the scientific study of the role of fire in ecosystems and the relationships between
+            <div class="fs-6 text-center ">
+                <p class="mx-5 py-5 ">Fire ecology is the scientific study of the role of fire in ecosystems and the
+                    relationships between
                     fire, the environment, and living organisms. It involves understanding how fire shapes landscapes,
                     influences plant and animal communities, and affects ecological processes. Fire ecologists study the
-                    origins of fire, what influences spread and intensity, fire’s relationship with ecosystems, how
+                    origins of fire, what influences spread and intensity, fire's relationship with ecosystems, how
                     controlled fires can be used to maintain ecosystem health and more. Fire has been a natural
                     component of many ecosystems for millions of years, and fire ecology seeks to uncover the complex
                     interactions between fire and the environment.</p>
 
             </div>
 
-            <div style="height: 20px;"></div>
+            <div style="height: 30px;"></div>
+
+
 
         </section>
 
@@ -118,7 +121,16 @@
         <!-- effect on environment  -->
         <section class="bgenvironmenteffect">
 
-            <div style="height: 70px;"></div>
+            <!-- curve -->
+            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="bgdefination" fill="" fill-opacity="1"></path>
+            </svg>
+
+
+            <div style="height: 50px;"></div>
 
             <!-- heading -->
             <div class="fs-2 text-center py-4">Effects of Fire on Ecosystems</div>
@@ -126,15 +138,16 @@
 
 
             <!-- cards -->
-            <div>
+            <div class="mt-5">
 
                 <div class="container-fluid">
 
                     <div class="row justify-content-evenly">
 
-                        <!-- MOSAIC PATTERS    -->
 
-                        <div class="col-11 col-sm-10 col-xl-7 col-xxl-5 effects-card rounded-4 shadow-lg p-4 my-4">
+
+                        <!-- MOSAIC PATTERS    -->
+                        <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
 
                             <p class="fs-1 text-center font-tektur mt-3 "> Mosaic Patterns</p>
 
@@ -158,7 +171,7 @@
 
 
                         <!-- soil -->
-                        <div class="col-11 col-sm-10 col-xl-7 col-xxl-5 effects-card rounded-4 shadow-lg p-4 my-4">
+                        <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
 
                             <p class="fs-1 text-center font-tektur mt-3 "> Soil</p>
 
@@ -177,7 +190,7 @@
 
 
                         <!-- animals -->
-                        <div class="col-11 col-sm-10 col-xl-7 col-xxl-5 effects-card rounded-4 shadow-lg p-4 my-4">
+                        <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
 
                             <p class="fs-1 text-center font-tektur mt-3 "> Animal Population</p>
 
@@ -201,7 +214,7 @@
 
 
                         <!-- plant -->
-                        <div class="col-11 col-sm-10 col-xl-7 col-xxl-5 effects-card rounded-4 shadow-lg p-4 my-4">
+                        <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
 
                             <p class="fs-1 text-center font-tektur mt-3 ">Plants</p>
 
@@ -237,6 +250,32 @@
 
 
 
+
+        <!-- organisations  -->
+
+        <section class="bgorganisations">
+
+            <!-- curve -->
+            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="bgenvironmenteffect" fill="" fill-opacity="1"></path>
+            </svg>
+
+
+            <div style="height: 50px;"></div>
+
+            <!-- heading -->
+            <div class="fs-2 text-center py-4">Organisations working on Fire Ecology</div>
+
+
+
+            <div style="height: 50px;"></div>
+
+
+
+        </section>
 
 
 
