--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
         <hr>
 
+        <!-- Section 1 -->
         <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
                 <div class="container row">
@@ -119,6 +120,7 @@
 
         <hr>
 
+        <!-- Section 2 -->
         <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
                 <div class="container row">
@@ -151,6 +153,7 @@
 
         <hr>
 
+        <!-- Section 3 -->
         <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
                 <div class="container row">
@@ -184,6 +187,7 @@
 
         <hr>
 
+        <!-- Section 4 -->
         <section class="mt-5 justify-content-evenly">
             <div class="container-fluid">
                 <div class="container row">
@@ -213,6 +217,16 @@
                 </div>
             </div>
         </section>
+
+        <hr>
+
+        <footer class="mt-5 pb-3">
+
+            <div class="container">
+                
+            </div>
+
+        </footer>
 
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
