--- a/about.html
+++ b/about.html
@@ -275,6 +275,118 @@
 
 
 
+            <div class="mt-5">
+
+                <div class="container-fluid">
+
+                    <div class="row justify-content-evenly">
+
+
+
+                        <!-- MOSAIC PATTERS    -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-1 text-center font-tektur mt-3 "> Mosaic Patterns</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Wildland fires create a mixture of totally
+                                burned,
+                                partially burned, and unburned sections called a burn mosaic.
+                                The varying degrees of burn are a result of many factors including wind shifts,
+                                daily temperature changes, moisture levels, and varying chemical composition of
+                                the vegetation. The burn mosaic results in varied regrowth rates that
+                                creates a vegetation mosaic.</p>
+
+
+
+
+                            </p>
+
+                        </div>
+
+
+
+                        <!-- soil -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-1 text-center font-tektur mt-3 "> Soil</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Wildland fires can be both a detriment and
+                                a benefit to soil. The soil can become more nu- trient-rich after a fire due to the high
+                                mineral content of the ash and charcoal and also due to the warm, moist conditions that
+                                increase microbial activity. The intense heat can also cause soil particles to become
+                                water-repellant, causing rainwater to run off. As the water runs off it can carry soil
+                                particles with it and lead to erosion.</p>
+
+                            </p>
+
+                        </div>
+
+
+                        <!-- animals -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-1 text-center font-tektur mt-3 "> Animal Population</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">While the vast majority of
+                                large mammals are able to flee fires, other populations often suffer substantial losses
+                                in the
+                                months following a fire due to a loss of food sources. Food sources become scarce
+                                because
+                                of the fire itself.
+                                These habitat changes allow many animals to thrive. Scavenging animals find an
+                                increased abundance of food sources and predatory animals may benefit from reduced
+                                forest cover which makes prey more visible. Nutrient-rich new growth also benefits many
+                                animals and animals such as deer will even eat the nutrient-rich charcoal and ashes.
+                                Birds also thrive on increased seed availability and nesting sites in snags.</p>
+
+                            </p>
+
+                        </div>
+
+
+                        <!-- plant -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-1 text-center font-tektur mt-3 ">Plants</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Vegetation composition is one factor that
+                                determines how a fire behaves. The fire behavior in turn determines the extent to which
+                                the plant populations are affected. The more intense the fire, the more vegetation is
+                                killed. The initial vegetation losses may look harsh, but the reduced number of trees
+                                and shrubs minimize competition among the surviving individuals. The organisms that
+                                survive the fire gain more access to nutrients, light, and water. Plants may exhibit
+                                increased growth, benefit- ing from the additional minerals in the soil as a result of
+                                the fire. Fire may also rid some plants of their parasites, increasing plant health.
+                            </p>
+
+                            </p>
+
+                        </div>
+
+
+                    </div>
+
+
+
+
+                </div>
+
+            </div>
+
+
+
+
+
+
+
         </section>
 
 
