--- a/about.html
+++ b/about.html
@@ -283,20 +283,157 @@
 
 
 
-                        <!-- MOSAIC PATTERS    -->
+                        <!-- IAWF    -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
 
-                            <p class="fs-1 text-center font-tektur mt-3 "> Mosaic Patterns</p>
+                            <p class="fs-2 text-center font-tektur mt-3 "> IAWF</p>
 
 
                             <div style="height: 50px;"></div>
-                            <p class="fs-5 rocket-text font-exo text-justify">Wildland fires create a mixture of totally
-                                burned,
-                                partially burned, and unburned sections called a burn mosaic.
-                                The varying degrees of burn are a result of many factors including wind shifts,
-                                daily temperature changes, moisture levels, and varying chemical composition of
-                                the vegetation. The burn mosaic results in varied regrowth rates that
-                                creates a vegetation mosaic.</p>
+                            <p class="fs-5 rocket-text font-exo text-justify">IAWF stands for International Association
+                                of Wildland Fire. It is a global network of experts, researchers, and professionals
+                                dedicated to
+                                advancing the knowledge and management of wildland fires. They provide resources,
+                                conferences, and collaboration opportunities for those involved in fire ecology.</p>
+
+                            </p>
+
+                        </div>
+
+
+
+                        <!-- PyroLife -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">PyroLife is a European Union-funded
+                                project that trains early-stage researchers in various aspects of fire ecology and
+                                management. It aims to build a new generation of experts equipped to address the complex
+                                challenges of fire-prone landscapes.
+                            </p>
+
+                            </p>
+
+                        </div>
+
+
+                        <!-- TTRS -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-3 text-center font-tektur mt-3 "> Tall Timbers Research Station</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Tall Timbers Research Station & Land
+                                Conservancy is based of in the United States, Tall Timbers conducts research and
+                                promotes
+                                the understanding of fire ecology, particularly in the southeastern United States. They
+                                offer educational programs, conduct research, and manage a large tract of land for
+                                ecological research.
+                            </p>
+
+                            </p>
+
+                        </div>
+
+
+                        <!-- AFE -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-3 text-center font-tektur mt-3 ">Association for Fire
+                                Ecology</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">AFE, short for Association for Fire
+                                Ecology is a nonprofit organization that brings together researchers, managers, and
+                                educators to foster the exchange of knowledge on fire ecology and management. They
+                                organize conferences, workshops, and other events to promote fire ecology awareness.
+
+                            </p>
+
+                            </p>
+
+                        </div>
+
+
+                        <!-- BNS CRC -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-3 text-center font-tektur mt-3 ">Bushfire and Natural Hazards</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Bushfire and Natural Hazards Cooperative
+                                Research Center is based in
+                                Australia, this cooperative research center focuses on understanding and managing
+                                natural hazards, including bushfires. They collaborate with researchers, emergency
+                                services, and communities to enhance fire resilience.
+
+                            </p>
+
+                            </p>
+
+                        </div>
+
+                        <!-- FLN -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-3 text-center font-tektur mt-3 ">Fire Learning Network</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Fire Learning Network (FLN), operating in
+                                the United States, FLN is a collaborative effort that brings together land managers,
+                                scientists, and communities to share their knowledge and experience related to fire
+                                ecology and
+                                management.
+
+                            </p>
+
+                            </p>
+
+                        </div>
+
+
+                        <!-- JFSP -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-3 text-center font-tektur mt-3 ">Joint Fire Science Program</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Joint Fire Science Program is a US
+                                interagency research program that
+                                funds and supports scientific studies related to wildland fires. They aim to provide
+                                decision-makers and land managers with accurate and timely information related to the
+                                same.
+                            </p>
+
+
+
+
+                            </p>
+
+                        </div>
+
+                        <!-- SFE -->
+                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+
+                            <p class="fs-3 text-center font-tektur mt-3 ">Southern Fire Exchange</p>
+
+
+                            <div style="height: 50px;"></div>
+                            <p class="fs-5 rocket-text font-exo text-justify">Focusing on the southeastern United
+                                States, The Southern Fire Exchange (SFE) is a fire science delivery program is funded by
+                                the Joint Fire Science Program. This organization provides
+                                information, tools and resources related to fire
+                                ecology, management, prescribed burning and more.
+
+                            </p>
 
 
 
@@ -306,70 +443,6 @@
                         </div>
 
 
-
-                        <!-- soil -->
-                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
-                            <p class="fs-1 text-center font-tektur mt-3 "> Soil</p>
-
-
-                            <div style="height: 50px;"></div>
-                            <p class="fs-5 rocket-text font-exo text-justify">Wildland fires can be both a detriment and
-                                a benefit to soil. The soil can become more nu- trient-rich after a fire due to the high
-                                mineral content of the ash and charcoal and also due to the warm, moist conditions that
-                                increase microbial activity. The intense heat can also cause soil particles to become
-                                water-repellant, causing rainwater to run off. As the water runs off it can carry soil
-                                particles with it and lead to erosion.</p>
-
-                            </p>
-
-                        </div>
-
-
-                        <!-- animals -->
-                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
-                            <p class="fs-1 text-center font-tektur mt-3 "> Animal Population</p>
-
-
-                            <div style="height: 50px;"></div>
-                            <p class="fs-5 rocket-text font-exo text-justify">While the vast majority of
-                                large mammals are able to flee fires, other populations often suffer substantial losses
-                                in the
-                                months following a fire due to a loss of food sources. Food sources become scarce
-                                because
-                                of the fire itself.
-                                These habitat changes allow many animals to thrive. Scavenging animals find an
-                                increased abundance of food sources and predatory animals may benefit from reduced
-                                forest cover which makes prey more visible. Nutrient-rich new growth also benefits many
-                                animals and animals such as deer will even eat the nutrient-rich charcoal and ashes.
-                                Birds also thrive on increased seed availability and nesting sites in snags.</p>
-
-                            </p>
-
-                        </div>
-
-
-                        <!-- plant -->
-                        <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
-                            <p class="fs-1 text-center font-tektur mt-3 ">Plants</p>
-
-
-                            <div style="height: 50px;"></div>
-                            <p class="fs-5 rocket-text font-exo text-justify">Vegetation composition is one factor that
-                                determines how a fire behaves. The fire behavior in turn determines the extent to which
-                                the plant populations are affected. The more intense the fire, the more vegetation is
-                                killed. The initial vegetation losses may look harsh, but the reduced number of trees
-                                and shrubs minimize competition among the surviving individuals. The organisms that
-                                survive the fire gain more access to nutrients, light, and water. Plants may exhibit
-                                increased growth, benefit- ing from the additional minerals in the soil as a result of
-                                the fire. Fire may also rid some plants of their parasites, increasing plant health.
-                            </p>
-
-                            </p>
-
-                        </div>
 
 
                     </div>
@@ -388,6 +461,14 @@
 
 
         </section>
+
+
+
+
+
+
+
+        
 
 
 
