--- a/about.html
+++ b/about.html
@@ -274,7 +274,7 @@
             <div style="height: 50px;"></div>
 
 
-
+            <!-- cards -->
             <div class="mt-5">
 
                 <div class="container-fluid">
@@ -441,24 +441,11 @@
                             </p>
 
                         </div>
-
-
-
-
                     </div>
-
-
-
-
                 </div>
-
             </div>
 
-
-
-
-
-
+            <div style="height: 40px;"></div>
 
         </section>
 
@@ -468,10 +455,10 @@
 
 
 
+
+
+
         
-
-
-
         <!-- Bootstrap Javascript  -->
         <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
