home page updated

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
 
         <!-- defination -->
-        <section class="bgdefination">
+        <section class="bgdefination" id="defination">
 
             <!-- curve -->
             <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -93,7 +93,7 @@
 
 
             <!-- heading -->
-            <div class="fs-2 text-center my-4">What is Fire Ecology?</div>
+            <div class="fs-2 text-center my-4" >What is Fire Ecology?</div>
 
             <!-- content -->
 
@@ -119,7 +119,7 @@
 
 
         <!-- effect on environment  -->
-        <section class="bgenvironmenteffect">
+        <section class="bgenvironmenteffect" id="environmentEff">
 
             <!-- curve -->
             <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
@@ -253,7 +253,7 @@
 
         <!-- organisations  -->
 
-        <section class="bgorganisations">
+        <section class="bgorganisations" id="organisations">
 
             <!-- curve -->
             <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
