--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <!-- contetn -->
                     <div class="col-9 col-lg-5 text-center my-auto">
 
-                        <h3 class="fs-2">What is Fire Ecoloy?</h3>
+                        <h3 class="fs-2">What is Fire Ecology?</h3>
 
                         <p class="mt-5 mx-auto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam nemo,
                             nobis voluptate
@@ -115,7 +115,7 @@
 
 
 
-                        <button class="btn button mt-4">Know More!</button>
+                        <a class="btn button mt-4 fs-6 px-3" href="about.html#defination">Know More!</a>
                     </div>
 
 
@@ -128,7 +128,6 @@
                 <div style="height: 50px;"></div>
             </div>
         </section>
-
 
 
 
@@ -152,7 +151,7 @@
                 <div class="row justify-content-evenly">
 
                     <div class="col-12 text-center">
-                        <h3 class="fs-2">What is Fire Ecoloy?</h3>
+                        <h3 class="fs-2">Organisations on Fire Ecology?</h3>
 
                     </div>
 
@@ -161,7 +160,7 @@
 
                 <div class="row justify-content-evenly mt-5">
 
-                    <div class="col-10 col-sm-8 col-md-6 col-lg-4 organisation-card rounded-4 shadow-lg p-4 my-4">
+                    <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
 
                         <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
 
@@ -177,13 +176,36 @@
 
                     </div>
 
-                    
+                    <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
 
+                        <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
+
+
+                        <div style="height: 50px;"></div>
+                        <p class="fs-5 rocket-text font-exo text-justify">PyroLife is a European Union-funded
+                            project that trains early-stage researchers in various aspects of fire ecology and
+                            management. It aims to build a new generation of experts equipped to address the complex
+                            challenges of fire-prone landscapes.
+                        </p>
+
+                        </p>
+
+                    </div>
+
+                </div>
+
+                <div class="text-center mt-3">
+                    <a href="about.html#organisations" class="btn button fs-6 px-3">Know More!</a>
                 </div>
 
                 <div style="height: 50px;"></div>
             </div>
         </section>
+
+
+
+
+
 
         <!-- Section 3 -->
         <section class="mt-5 bg">
