added sign-in and sign-up

--- a/about.html
+++ b/about.html
@@ -49,13 +49,13 @@
                 <ul class="navbar-nav ms-auto">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange">Home</a></b>
+                                class="nav-link hover-orange ">Home</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
                                 class="nav-link  hover-orange active">About</a></b>
                     </li>
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="AdvantageDisadvantage.html"
-                                class="nav-link  hover-orange ">Effects</a></b>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#"
+                                class="nav-link  hover-orange">Effects</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Videos</a></b>
                     </li>
