--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
                                 class="nav-link  hover-orange">About</a></b>
                     </li>
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="AdvantageDisadvantage.html"
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#"
                                 class="nav-link  hover-orange">Effects</a></b>
                     </li>
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="#" class="nav-link hover-orange">Videos</a></b>
